WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160626
DOMException should be constructible
https://bugs.webkit.org/show_bug.cgi?id=160626
Summary
DOMException should be constructible
Chris Dumez
Reported
2016-08-05 19:57:04 PDT
DOMException should be constructible: -
http://heycam.github.io/webidl/#idl-DOMException
DOMException already has a constructor in Firefox and Chrome. W3C test:
http://w3c-test.org/WebIDL/ecmascript-binding/es-exceptions/DOMException-constructor.html
Attachments
Patch
(48.30 KB, patch)
2016-08-05 20:24 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(48.30 KB, patch)
2016-08-05 20:36 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-08-05 20:24:33 PDT
Created
attachment 285476
[details]
Patch
Chris Dumez
Comment 2
2016-08-05 20:36:41 PDT
Created
attachment 285477
[details]
Patch
WebKit Commit Bot
Comment 3
2016-08-05 22:36:20 PDT
Comment on
attachment 285477
[details]
Patch Clearing flags on attachment: 285477 Committed
r204219
: <
http://trac.webkit.org/changeset/204219
>
WebKit Commit Bot
Comment 4
2016-08-05 22:36:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug