DOMException should be constructible https://bugs.webkit.org/show_bug.cgi?id=160626

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import WebIDL tests from W3C web-platform-tests.

* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/DOMException-constants-expected.txt: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/DOMException-constants.html: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/DOMException-constructor-expected.txt: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/DOMException-constructor.html: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/constructor-object-expected.txt: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/constructor-object.html: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/constructor-object.js: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/constructor-object.worker.js: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/exceptions-expected.txt: Added.
* web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/exceptions.html: Added.
* web-platform-tests/WebIDL/ecmascript-binding/has-instance-expected.txt: Added.
* web-platform-tests/WebIDL/ecmascript-binding/has-instance.html: Added.
* web-platform-tests/WebIDL/ecmascript-binding/interface-object-expected.txt: Added.
* web-platform-tests/WebIDL/ecmascript-binding/interface-object.html: Added.

Source/WebCore:

DOMException should be constructible:
- http://heycam.github.io/webidl/#dfn-DOMException
- http://heycam.github.io/webidl/#es-DOMException-constructor-object

DOMException already has a constructor in Firefox and Chrome so this
aligns our behavior with other browsers.

Test: imported/w3c/web-platform-tests/WebIDL/ecmascript-binding/es-exceptions/DOMException-constructor.html

* dom/DOMCoreException.cpp:
(WebCore::errorCodeFromName):
(WebCore::DOMCoreException::create):
(WebCore::DOMCoreException::DOMCoreException):
* dom/DOMCoreException.h:
* dom/DOMCoreException.idl:
* dom/ExceptionBase.cpp:
(WebCore::ExceptionBase::ExceptionBase):
* dom/ExceptionBase.h:


Canonical link: https://commits.webkit.org/178752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204219 268f45cc-cd09-0410-ab3c-d52691b4dbfc