Source/WebCore/dom/DOMCoreException.cpp
@@ -33,46 +33,67 @@
 
 namespace WebCore {
 
+// http://heycam.github.io/webidl/#idl-DOMException-error-names
 static const struct CoreException {
     const char* const name;
     const char* const description;
+    ExceptionCode code;
 } coreExceptions[] = {
-    { "IndexSizeError", "The index is not in the allowed range." },
-    { 0, 0 }, // DOMStringSizeError
-    { "HierarchyRequestError", "The operation would yield an incorrect node tree." },
-    { "WrongDocumentError", "The object is in the wrong document." },
-    { "InvalidCharacterError", "The string contains invalid characters." },
-    { 0, 0 }, // NoDataAllowedError
-    { "NoModificationAllowedError", "The object can not be modified." },
-    { "NotFoundError", "The object can not be found here." },
-    { "NotSupportedError", "The operation is not supported." },
-    { "InUseAttributeError", "The attribute is in use." },
-    { "InvalidStateError", "The object is in an invalid state." },
-    { "SyntaxError", "The string did not match the expected pattern." },
-    { "InvalidModificationError", " The object can not be modified in this way." },
-    { "NamespaceError", "The operation is not allowed by Namespaces in XML." },
-    { "InvalidAccessError", "The object does not support the operation or argument." },
-    { 0, 0 }, // ValidationError
-    { "TypeMismatchError", "The type of an object was incompatible with the expected type of the parameter associated to the object." },
-    { "SecurityError", "The operation is insecure." },
-    { "NetworkError", " A network error occurred." },
-    { "AbortError", "The operation was aborted." },
-    { "URLMismatchError", "The given URL does not match another URL." },
-    { "QuotaExceededError", "The quota has been exceeded." },
-    { "TimeoutError", "The operation timed out." },
-    { "InvalidNodeTypeError", "The supplied node is incorrect or has an incorrect ancestor for this operation." },
-    { "DataCloneError", "The object can not be cloned." },
-    { "EncodingError", "The encoding operation (either encoded or decoding) failed." },
-    { "NotReadableError", "The I/O read operation failed." },
-    { "UnknownError", "The operation failed for an unknown transient reason (e.g. out of memory)." },
-    { "ConstraintError", "A mutation operation in a transaction failed because a constraint was not satisfied." },
-    { "DataError", "Provided data is inadequate." },
-    { "TransactionInactiveError", "A request was placed against a transaction which is currently not active, or which is finished." },
-    { "ReadOnlyError", "The mutating operation was attempted in a \"readonly\" transaction." },
-    { "VersionError", "An attempt was made to open a database using a lower version than the existing version." },
-    { "OperationError", "The operation failed for an operation-specific reason." },
-    { "NotAllowedError", "The request is not allowed by the user agent or the platform in the current context, possibly because the user denied permission." }
+    { "IndexSizeError", "The index is not in the allowed range.", 1 },
+    { nullptr, nullptr, 0 }, // DOMStringSizeError
+    { "HierarchyRequestError", "The operation would yield an incorrect node tree.", 3 },
+    { "WrongDocumentError", "The object is in the wrong document.", 4 },
+    { "InvalidCharacterError", "The string contains invalid characters.", 5 },
+    { nullptr, nullptr, 0 }, // NoDataAllowedError
+    { "NoModificationAllowedError", "The object can not be modified.", 7 },
+    { "NotFoundError", "The object can not be found here.", 8 },
+    { "NotSupportedError", "The operation is not supported.", 9 },
+    { "InUseAttributeError", "The attribute is in use.", 10 },
+    { "InvalidStateError", "The object is in an invalid state.", 11 },
+    { "SyntaxError", "The string did not match the expected pattern.", 12 },
+    { "InvalidModificationError", " The object can not be modified in this way.", 13 },
+    { "NamespaceError", "The operation is not allowed by Namespaces in XML.", 14 },
+    { "InvalidAccessError", "The object does not support the operation or argument.", 15 },
+    { nullptr, nullptr, 0 }, // ValidationError
+    { "TypeMismatchError", "The type of an object was incompatible with the expected type of the parameter associated to the object.", 17 },
+    { "SecurityError", "The operation is insecure.", 18 },
+    { "NetworkError", " A network error occurred.", 19 },
+    { "AbortError", "The operation was aborted.", 20 },
+    { "URLMismatchError", "The given URL does not match another URL.", 21 },
+    { "QuotaExceededError", "The quota has been exceeded.", 22 },
+    { "TimeoutError", "The operation timed out.", 23 },
+    { "InvalidNodeTypeError", "The supplied node is incorrect or has an incorrect ancestor for this operation.", 24 },
+    { "DataCloneError", "The object can not be cloned.", 25 },
+    { "EncodingError", "The encoding operation (either encoded or decoding) failed.", 0 },
+    { "NotReadableError", "The I/O read operation failed.", 0 },
+    { "UnknownError", "The operation failed for an unknown transient reason (e.g. out of memory).", 0 },
+    { "ConstraintError", "A mutation operation in a transaction failed because a constraint was not satisfied.", 0 },
+    { "DataError", "Provided data is inadequate.", 0 },
+    { "TransactionInactiveError", "A request was placed against a transaction which is currently not active, or which is finished.", 0 },
+    { "ReadOnlyError", "The mutating operation was attempted in a \"readonly\" transaction.", 0 },
+    { "VersionError", "An attempt was made to open a database using a lower version than the existing version.", 0 },
+    { "OperationError", "The operation failed for an operation-specific reason.", 0 },
+    { "NotAllowedError", "The request is not allowed by the user agent or the platform in the current context, possibly because the user denied permission.", 0 }
 };
+
+static ExceptionCode errorCodeFromName(const String& name)
+{
+    for (auto& entry : coreExceptions) {
+        if (entry.name == name)
+            return entry.code;
+    }
+    return 0;
+}
+
+Ref<DOMCoreException> DOMCoreException::create(const String& message, const String& name)
+{
+    return adoptRef(*new DOMCoreException(errorCodeFromName(name), message, name));
+}
+
+DOMCoreException::DOMCoreException(ExceptionCode ec, const String& message, const String& name)
+    : ExceptionBase(ec, name, message, ASCIILiteral("DOM"))
+{
+}
 
 bool DOMCoreException::initializeDescription(ExceptionCode ec, ExceptionCodeDescription* description)
 {
